# purposeapiv3

./: .env  Cargo.toml
migrations/: 20231107100704_Similarity_Extension.sql  20231107105646_Create_the_users_table.sql
src/: config.rs  main.rs
src/models/: filtered_user.rs  login_user.rs  mod.rs  register_user.rs  token_claim.rs  user.rs
src/routes/: mod.rs  router.rs
src/routes/authentication/: login.rs  logout.rs  me.rs  mod.rs  register.rs
src/utils/: filters.rs  jwt_authentication.rs  mod.rs
